# Graptos

./: .gitignore  Makefile  README.md
.github/workflows/: c-cpp.yml
data/: io.github.cleaf.Editor.desktop  io.github.graptos.Editor.desktop
data/project-templates/c-library/files/: CMakeLists.txt  Makefile  README.md  gitignore  meson.build  project.c  project.h  test_project.c
data/project-templates/cpp-cli/files/: CMakeLists.txt  Makefile  README.md  gitignore  main.cpp  meson.build  project.hpp  test_main.cpp
data/project-templates/python-cli/files/: README.md  __init__.py  __main__.py  cli.py  pyproject.toml  test_cli.py
data/themes/: apprentice.ini  dracula.ini  github.ini  gruvbox.ini  moonfly.ini  srcery.ini  tokyonight.ini
docs/: AI_USAGE_POLICY.md  FORMATTING.md  PREFERENCES.md  PROJECT_TEMPLATES.md  SYNTAX.md
src/: app.h  app_actions.c  app_core.c  app_layout.c  app_private.h  app_state.c  codex_client.c  codex_client.h  codex_markdown.c  codex_markdown.h  codex_panel.c  codex_panel.h  codex_protocol.c  codex_protocol.h  codex_review.c  codex_review.h  completion.c  completion.h  config.c  config.h  dialogs.c  dialogs.h  editor_tab.h  editor_tab_build.c  editor_tab_completion.c  editor_tab_core.c  editor_tab_diagnostics.c  editor_tab_edit.c  editor_tab_gutter.c  editor_tab_hover.c  editor_tab_io.c  editor_tab_keys.c  editor_tab_latex.c  editor_tab_preview.c  editor_tab_private.h  editor_tab_sourceview.c  editor_tab_undo.c  formatter.c  formatter.h  formatter_layout.c  (+33 more)
src/app/: app_about_view_actions.inc.c  app_file_search_actions.inc.c  app_preference_actions.inc.c  app_window_events.inc.c  app_window_lifecycle.inc.c  app_window_state.inc.c  app_window_tabs.inc.c  app_window_tiles.inc.c
src/editor/: editor_tab_context_menu.inc.c  editor_tab_highlight_scheduling.inc.c  editor_tab_hover_events.inc.c  editor_tab_hover_refs.inc.c  editor_tab_lifecycle.inc.c  editor_tab_signals_preferences.inc.c
src/git/: git_actions.inc.c  git_core.inc.c  git_credentials.inc.c
src/index/: index_candidates.inc.c  index_collect.inc.c  index_references.inc.c
src/lsp/: lsp_client_completion.inc.c  (+7 more)
syntax/: beancount.yaml  c.yaml  cpp.yaml  css.yaml  diff.yaml  go.yaml  html.yaml  java.yaml  javascript.yaml  json.yaml  latex.yaml  markdown.yaml  php.yaml  python.yaml  rust.yaml  shell.yaml  sql.yaml  test.yaml  toml.yaml  typescript.yaml  yaml.yaml  zig.yaml
tests/: smoke_window.c  unit_tests.c
(+48 files in other folders)
