[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "${project_slug}"
version = "0.1.0"
description = "${project_name}"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "${license}" }
authors = [{ name = "${author}", email = "${email}" }]

[project.scripts]
${project_slug} = "${package_name}.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
